--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently \"npm run client:watch\" \"npm run server:watch\"",
-    "client:build": "cross-env NODE_ENV=production webpack --config ./webpack.production.config.js",
+    "start": "concurrently \"npm run client:build\" \"npm run server:start\"",
+    "client:build": "webpack --config ./webpack.production.config.js",
     "client:watch": "webpack -w",
     "server:start": "cross-env NODE_ENV=production node app.js",
     "server:watch": "nodemon app.js"
   },
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
+    "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -53,7 +54,7 @@
     "precss": "^4.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.4",
+    "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   }
 }
